# nautilus

./: .gitignore  Cargo.toml  Containerfile  Makefile  README.md  UsingNautilus.md  configure_enclave.sh  deny.toml  expose_enclave.sh  register_enclave.sh  seal-config.yaml
.github/workflows/: rust.yml
docs/infight-amm/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PITCH_GUIDE.md  README.md  TECHNICAL_SPECS.md
move/app/sources/: weather.move
move/enclave/sources/: enclave.move
move/seal-policy/: Move.toml  test_bcs_encoding.move
move/seal-policy/sources/: seal_policy.move  weather.move
move/twitter-example/sources/: twitter.move
move/weather-example/sources/: weather.move
nautilus-gcp-verify/: README.md
nautilus-gcp-verify/src/nautilus-server/: Cargo.toml  allowed_endpoints.yaml
nautilus-gcp-verify/src/nautilus-server/src/: app.rs  common.rs  lib.rs  main.rs
src/nautilus-server/: Cargo.toml  run.sh
src/nautilus-server/src/: common.rs  lib.rs  main.rs
src/nautilus-server/src/apps/gcp-verify-example/: mod.rs
src/nautilus-server/src/apps/seal-example/: README.md  endpoints.rs  mod.rs  seal_config.yaml  types.rs
src/nautilus-server/src/apps/twitter-example/: mod.rs
src/nautilus-server/src/apps/weather-example/: mod.rs
src/nautilus-server/src/examples/seal/: README.md  mod.rs  seal_config.yaml
src/nautilus-server/src/examples/seal-example/: mod.rs
src/nautilus-server/src/examples/seal_example/: README.md  endpoints.rs  mod.rs  seal_config.yaml  seal_sdk.rs  types.rs
src/seal-cli/: Cargo.toml  seal_config.yaml
src/seal-cli/src/: seal_cli.rs
