[package]
name = "seal-cli"
version = "0.1.0"
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
repository = "https://github.com/MystenLabs/nautilus"

[dependencies]
sui-sdk = { git = "https://github.com/MystenLabs/sui", rev = "42ba6c0" }
sui-types = { git = "https://github.com/MystenLabs/sui", rev = "42ba6c0" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", rev = "42ba6c0" }
clap = { version = "4.0", features = ["derive"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", features = ["aes"] }
seal-sdk = { git = "https://github.com/MystenLabs/seal", rev = "9109fd67c783184b510fd4b1c8d8867d42be48a1", package = "seal-sdk" }
serde = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = ["serde"], rev = "86a9e06" }
serde_json = "1.0.140"
reqwest = { version = "0.11", features = ["json"] }
bcs = "0.1.6"
serde_yaml = "0.9.34"

[[bin]]
name = "seal_cli"
path = "src/seal_cli.rs"